refactor(backend): update SecurityConfig with new endpoints, WebMvcConfig, PaymentStatus, Product entity with discountPercent